@@ -1,3 +1,7 @@
+2009-02-01  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #10323: htmlArea RTE: hotkey CTRL+0 is not honoured
+
 2009-01-26  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9904: htmlArea RTE: RTE.default.buttons.table.properties.borderStyle.removeItems is not honored
